--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin'
 repositories {
     mavenCentral()
     maven {
-        url "http://packages.confluent.io/maven/"
+        url "https://packages.confluent.io/maven/"
     }
 }
 
